force-app/main/default/objects/CRM_Order_Event__e/CRM_Order_Event__e.object-meta.xml
<CustomObject>
    <description>publishes platform even on order insert</description>
    <label>CRM Order Event</label>
    <pluralLabel>CRM Order Event</pluralLabel>
</CustomObject>