force-app/main/default/objects/CRM_Order_Event__e/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Order Bill to Account details</description>
    <label>Bill To Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>