force-app/main/default/objects/CRM_Order_Event__e/fields/Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Order details of bill to contact</description>
    <label>Bill To Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>