force-app/main/default/objects/CRM_Order_Event__e/fields/Customer_AuthorizedBy__c.field-meta.xml
<CustomField>
    <fullName>Customer_AuthorizedBy__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Order details of customer authorized by</description>
    <label>Customer AuthorizedBy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>