force-app/main/default/objects/CRM_Order_Event__e/fields/Order_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Event_Type__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>type of event</description>
    <label>Order Event Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>