force-app/main/default/objects/CRM_Order_Event__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Id of the order</description>
    <label>Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>