force-app/main/default/objects/CRM_Order_Event__e/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Type/ business unit of Order</description>
    <label>Order Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>