force-app/main/default/objects/CRM_Order_Event__e/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Payer details of order</description>
    <label>Payer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>