force-app/main/default/objects/CRM_Order_Event__e/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Order ship to Account details</description>
    <label>Ship To Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>