force-app/main/default/objects/CRM_Order_Event__e/fields/Ship_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Order details of ship to contact</description>
    <label>Ship To Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>