force-app/main/default/objects/CRM_Order_Event__e/fields/Sold_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Account__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Order sold to Account details</description>
    <label>Sold To Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>